--- a/Neural Network with pytorch/Neural network with Pytorch.ipynb
+++ b/Neural Network with pytorch/Neural network with Pytorch.ipynb
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "57294693",
+   "id": "0f828711",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c573b7b3",
+   "id": "05ec3c06",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "bcace182",
+   "id": "01651f62",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "74f2b954",
+   "id": "a06e6dd2",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e3356dd",
+   "id": "ef22cd01",
    "metadata": {},
    "source": [
     "## Building Model"
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "fa11d4fe",
+   "id": "a3b299e5",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b4c6220c",
+   "id": "d99defaa",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e69af8f",
+   "id": "73b91d5c",
    "metadata": {},
    "source": [
     "Having 5 neurons => layer turns input data from having 2 features to 5"
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1a3f96d7",
+   "id": "9f5d0113",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d1dfe26c",
+   "id": "7d099d1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4de137ca",
+   "id": "18bec05b",
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b705a46b",
+   "id": "231cadfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,8 +505,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "id": "b7e1cf68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.3291],\n",
+       "        [-0.0443],\n",
+       "        [-0.1879],\n",
+       "        [-0.4065],\n",
+       "        [-0.4877]], grad_fn=<SliceBackward0>)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_logits = model_0(X_test.to(device))[:5]\n",
+    "y_logits"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8390bedd",
+   "id": "f20e87b8",
    "metadata": {},
    "outputs": [],
    "source": []
